tdf#115434 Fix key press misbehaviors in sidebar

This patch also is for tdf#98505 and tdf#84657

Change-Id: I6bc125ace035b2c8126f013a63bcc9498b06e08c